drm/xe/mvs: Support the AMC I2C Interface
Add in Management Cards have functionality that is usually
accessed via the BMC out of band.

For newer platforms this may not be the best path.

Add support to access the AMC via the I2C bus provided by
an SOC infrastructure.

Signed-off-by: Michael J. Ruhl <michael.j.ruhl@intel.com>

--- a/drivers/gpu/drm/xe/Makefile
+++ b/drivers/gpu/drm/xe/Makefile
@@ -25,7 +25,8 @@ $(obj)/generated/%_wa_oob.c $(obj)/generated/%_wa_oob.h: $(obj)/xe_gen_wa_oob \
 
 # core driver code
 
-xe-y += xe_bb.o \
+xe-y += xe_amc.o \
+	xe_bb.o \
 	xe_bo.o \
 	xe_bo_evict.o \
 	xe_devcoredump.o \
